<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners"
    android:layout_marginVertical="@dimen/_4dp"
    android:elevation="@dimen/_2dp"
    android:padding="@dimen/dp_3x">

    <TextView
        android:id="@+id/tempValueTxt"
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_38"
        android:textSize="@dimen/sp_5x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weatherTypeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1x"
        android:text="@string/heavy_rain"
        android:textSize="@dimen/sp_2x"
        style="@style/DescriptionStyle"
        app:layout_constraintStart_toStartOf="@+id/tempValueTxt"
        app:layout_constraintTop_toBottomOf="@+id/tempValueTxt" />

    <TextView
        android:id="@+id/locationTxt"
        style="@style/TitleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_3x"
        android:text="@string/rome_italy"
        android:textSize="@dimen/sp_3x"
        android:layout_marginEnd="@dimen/dp_2x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/typeIc"
        app:layout_constraintStart_toStartOf="@+id/weatherTypeTxt"
        app:layout_constraintTop_toBottomOf="@+id/weatherTypeTxt" />

    <ImageView
        android:id="@+id/typeIc"
        android:layout_width="110dp"
        android:layout_height="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sun" />

    <TextView
        android:id="@+id/highestValueTxt"
        style="@style/ValuesStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_33"
        android:textSize="@dimen/sp_2x"
        android:layout_marginEnd="@dimen/_4dp"
        app:layout_constraintBottom_toBottomOf="@+id/locationTxt"
        app:layout_constraintEnd_toStartOf="@+id/lowestValueTxt"
        app:layout_constraintStart_toStartOf="@+id/typeIc"
        app:layout_constraintTop_toTopOf="@+id/locationTxt" />

    <TextView
        android:id="@+id/lowestValueTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_33"
        android:textSize="@dimen/sp_2x"
        style="@style/ValuesStyle"
        app:layout_constraintBottom_toBottomOf="@+id/highestValueTxt"
        app:layout_constraintEnd_toEndOf="@+id/typeIc"
        app:layout_constraintTop_toTopOf="@+id/highestValueTxt"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>