<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners"
    android:elevation="@dimen/_2dp"
    android:layout_marginVertical="@dimen/_4dp"
    android:padding="@dimen/dp_3x">

    <TextView
        android:id="@+id/dateTxt"
        style="@style/TitleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/today"
        android:textSize="@dimen/sp_3x"
        android:layout_marginEnd="@dimen/dp_1x"
        app:layout_constraintEnd_toStartOf="@+id/typeIc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/typeTxt"
        style="@style/TitleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1x"
        android:text="@string/clear"
        android:textSize="@dimen/sp_2x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dateTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTxt" />

    <ImageView
        android:id="@+id/typeIc"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sun" />

    <TextView
        android:id="@+id/highestValueTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_33"
        android:textSize="@dimen/sp_2x"
        android:layout_marginEnd="@dimen/dp_2x"
        android:layout_marginTop="@dimen/dp_1x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lowestValueTxt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/typeIc"
        app:layout_constraintTop_toBottomOf="@+id/typeIc"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/lowestValueTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_33"
        android:textSize="@dimen/sp_2x"
        app:layout_constraintBottom_toBottomOf="@+id/highestValueTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/highestValueTxt"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>